sdk/python/lib/test/automation/errors/compilation_error/go/go.mod
module compilation_error

go 1.16

require github.com/pulumi/pulumi/sdk/v3 v3.33.2
